--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>오광석 - 시멘틱태그 - 레이아웃 - 370p - 24.06.07.금</title>
+    <title>오광석 - 강아지사이트 - 24.06.07.금</title>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
